@@ -3,6 +3,7 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite (Git)
 
 pts-core: When an install fails, try a newer minor version update to that test profile if available (fixes broken download mirrors, etc)
+pts-core: When a newer minor version of a test profile is installed and a requested (older) one is not, use the newer compatible version
 
 Phoronix Test Suite 9.6.1
 25 May 2020
